--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="calculator">
         <div class="display"></div>
+        <div class="bottom">
         <div class="container numbers">
             <div class="btn number" data-attr="7">7</div>
             <div class="btn number" data-attr="8">8</div>
@@ -31,6 +32,7 @@
             <div class="btn modifier" data-attr="*">*</div>
             <div class="btn modifier" data-attr="-">-</div>
             <div class="btn modifier" data-attr="+">+</div>
+        </div>
         </div>
     </div>
 </body>
